src/components/elements/Navbar.module.scss
.navbar {
    background: var(--bg-muted);

    display: flex;
    flex-direction: column;
    align-items: stretch;
    z-index: 2;
    grid-row: 1 / -2;
    border-right: var(--border);
    padding: 8px 0px;

    transition: transform var(--transition);
    gap: 4px;
}


.item {
    display: flex;
    align-items: center;
    color: var(--text-secondary);
    margin: 0 9px;
    position: relative;
    padding: 4px;
    border-radius: var(--border-radius);
}

.active {
    color: var(--accent-alt);
    background: var(--accent-glow);
}

.item::before {
    content: "";
    position: absolute;
    left: -6px;
    top: calc(50% - 30%);
    width: 3px;
    height: 60%;
    background: var(--accent-alt);
    border-radius: 0px 3px 3px 0px;
    transform: scale(0);
    transition: var(--transition);
}

.active::before {
    content: "";
    transform: scale(1);
}

